feat: 添加canvas-矩形/圆

--- a/docs/src/basic/HTML/Canvas/02.md
+++ b/docs/src/basic/HTML/Canvas/02.md
@@ -1,5 +1,5 @@
 ---
-title: 02-直线图形
+title: 02-01直线图形-直线
 tags:
   - HTML
   - Canvas
@@ -7,7 +7,7 @@ date: 2024-06-22
 sidebarDepth: 5
 ---
 
-# 02-直线图形
+# 02-01直线图形-直线
 
 ## 绘制直线
 ### 画一条直线的步骤
