feat: 添加圆角矩形md

--- a/docs/src/basic/HTML/Canvas/05.md
+++ b/docs/src/basic/HTML/Canvas/05.md
@@ -69,7 +69,7 @@ function createColor(cxt, n, width, height) {
 }
 
 window.onload = function() {
-    const cnv = $$('canvas');
+    const cnv = $$('canvas05-03');
     const cxt = cnv.getContext('2d');
 
     createColor(cxt, 6, cnv.width, cnv.height)
@@ -86,7 +86,7 @@ window.onload = function() {
 <canvas id="canvas05-04" width="255"></canvas>
 ```
 ```js
-const cnv = $$('canvas');
+const cnv = $$('canvas05-04');
 const cxt = cnv.getContext('2d');
 
 let r = 255;
